ToDo bar: Multiday events shown incorrectly
For an event that started yesterday at 16:30 and ends today at 03:00, the ToDo bar shows under “Today” the event with start 16:30. This is wrong, as the event does not start today at 16:30.
For an event that started yesterday at 16:30 and ends today at 03:00, the ToDo bar shows under “Today” the event with start 16:30. This is wrong, as the event does not start today at 16:30.