I#578 - ToDo bar: Multiday events shown incorrectly

Closes https://gitlab.gnome.org/GNOME/evolution/issues/578